Bug 407110 - Krita Script Starter has no translation
Summary: Krita Script Starter has no translation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Translation (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alvin Wong
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-30 18:47 UTC by Sabri Ünal
Modified: 2021-06-29 06:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the screenshot of the bug (58.27 KB, image/png)
2019-04-30 18:47 UTC, Sabri Ünal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sabri Ünal 2019-04-30 18:47:20 UTC
Created attachment 119755 [details]
the screenshot of the bug

I have finished the translation of Krita.

"Krita Script Starter" looks still English.


STEPS TO REPRODUCE
1. Change UI language. 
2. Choose Tools - Script - Krita Script Starter

SOFTWARE/OS VERSIONS

Krita

 Version: 4.2.0-pre-alpha (Via PPA)
 Languages: tr
 Hidpi: true

Qt

  Version (compiled): 5.9.5
  Version (loaded): 5.9.5

OS Information

  Build ABI: x86_64-little_endian-lp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: linux
  Kernel Version: 4.15.0-48-lowlatency
  Pretty Productname: Ubuntu 18.04.2 LTS
  Product Type: ubuntu
  Product Version: 18.04
Comment 1 wolthera 2019-07-28 11:06:07 UTC
That's because it uses a 'ui' file instead of generating the widgets in the code, and I don't think the python code can handle anything but i18n calls right now.
Comment 2 Karl Ove Hufthammer 2019-07-30 20:28:37 UTC
Could perhaps using pyuic5 to turn the .ui file into a .py file work? The resulting file seems to contain localisation-related commands for UI strings.

(Note: The .ui file should be automatically converted to .py file at *compile time*, and the resulting .py file should not be commited to Git.)
Comment 3 Bug Janitor Service 2021-06-27 10:24:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/931
Comment 4 Dmitry Kazakov 2021-06-29 06:11:43 UTC
Git commit 8450dbfcb66a045a8fb05d444f327ffbcf6c4c77 by Dmitry Kazakov, on behalf of Alvin Wong.
Committed on 29/06/2021 at 06:06.
Pushed by dkazakov into branch 'master'.

Load translations for .ui files in Python plugins

M  +14   -0    krita/main.cc
M  +2    -2    plugins/python/krita_script_starter/bbdkss.ui
M  +2    -2    plugins/python/selectionsbagdocker/selectionsbagdocker.ui

https://invent.kde.org/graphics/krita/commit/8450dbfcb66a045a8fb05d444f327ffbcf6c4c77