Load translations for .ui files in Python plugins

BUG: 407110